--- a/index.html
+++ b/index.html
@@ -9,7 +9,46 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,900,100">
 </head>
 <body>
-	<header></header>
-	<footer></footer>
+	<header>
+		<div class="grid">
+			<div class="row">
+				<div class="col-6">
+					<img src="images/logo.png">
+				</div>
+				<div class="col-6">
+					<h1>Christine Doole<span>Front-end Ninja</span></h1>
+				</div>
+			</div>
+		</div>
+	</header>
+	<section class="toplist grid">
+		<div class="row">
+			<div class="jumbotron">
+				<img src="images/one-million-lines.png">
+				<a href="http://cdoole.getforge.io"><h3>One Million Lines</h3></a>
+				<p>Project for Udemy course: Build a Website in 1 Week</p>
+			</div>
+		</div>
+		<div class="feature row">
+			<h2>Featured Work</h2>
+		</div>
+		<div class="row">
+			<div class="col-4">
+				<img src="images/cat.jpg">
+				<a href=""><h3>Project 1</h3></a>
+			</div>
+			<div class="col-4">
+				<img src="images/tree.jpg">
+				<a href=""><h3>Project 2</h3></a>
+			</div>
+			<div class="col-4">
+				<img src="images/phone.jpg">
+				<a href=""><h3>Project 3</h3></a>
+			</div>
+		</div>
+	</section>
+	<footer>
+		
+	</footer>
 </body>
 </html>
