--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/custom.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,900,100">
-	<link rel="icon" href="favicon.ico" type="images/favicon.ico">
-	<link rel="shortcut icon" href="favicon.ico" type="images/favicon.ico">
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<header>
