New Featured Work
New project added to portfolio

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 		</div>
 		<div class="row">
 			<div class="col-4">
-				<img src="images/cat.jpg">
-				<a href=""><h3>Project 1</h3></a>
+				<img src="images/sty-con.png">
+				<a href=""><h3>Styles Conference</h3></a>
+				<p>Website project for an imaginary Styles Conference.<br>Course: Learn to Code by Shay Howe</p>
 			</div>
 			<div class="col-4">
 				<img src="images/tree.jpg">
