--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="row">
 			<div class="col-4">
 				<img src="images/sty-con.png">
-				<a href=""><h3>Styles Conference</h3></a>
+				<a href="https://cdoole.github.io/styles-conference/index.html"><h3>Styles Conference</h3></a>
 				<p>Website project for an imaginary Styles Conference.<br>Course: Learn to Code by Shay Howe</p>
 			</div>
 			<div class="col-4">
