--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="row">
 			<div class="jumbotron">
 				<img src="images/one-million-lines.png">
-				<a href="https://cdoole.github.io/one-million-lines"><h3>One Million Lines</h3></a>
+				<a href="https://cdoole.github.io/One-Million-Lines"><h3>One Million Lines</h3></a>
 				<p>Project for Udemy course: Build a Website in 1 Week</p>
 			</div>
 		</div>
